fixed footer alignment
social media icons were outside of footer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -14,7 +14,7 @@ footer {
   display: flex;
   flex-direction: row;
   list-style-type: none;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .footer-navbar {
@@ -22,6 +22,8 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0;
+
 }
 
 .socialmedia-icons {
@@ -30,6 +32,6 @@ footer {
 }
 .socialmedia-icons img {
   height: 15px;
-  width: 15px;
+  width: auto;
   margin: 0 10px;
 }
